[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1"                                   # error handling
tokio = { version = "1", features = ["full"] } # async networking
hashbrown = "0"
once_cell = "1"                              # single-assignment cell
bytes = "1"
rand = "0"
hex = "0"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"]}
